# gympulse

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
GymPulse/: README.md  WidgetProvider.swift.sketch
assets/: build_icons.sh
docs/superpowers/plans/: 2026-07-10-gympulse.md
docs/superpowers/specs/: 2026-07-10-gympulse-design.md
fetcher/: config.py  derive.py  fetcher.py  gym_busy.py  histogram.py
launchd/: README.md  dev.francisco.gympulse.plist
scrape/: README.md  live.py  probe_live.py
swiftbar/: gympulse.10m.py
tests/: conftest.py  test_derive.py  test_fetcher.py  test_histogram.py  test_plugin_render.py  test_scrape_parse.py
