[project]
name = "gympulse"
version = "0.1.0"
description = "Gym busyness in your Mac menu bar"
requires-python = ">=3.11"
dependencies = [
    "livepopulartimes==1.3",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["fetcher*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
