[project]
name = "gympulse"
version = "0.1.0"
description = "Gym busyness in your Mac menu bar"
requires-python = ">=3.11"
# No runtime dependencies — the data source is the self-tuned WEEKLY_CURVE in
# fetcher/config.py (stdlib only, no network). See the data-source pivot in the spec.
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["fetcher*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
